Fixed the overflowing btns and H1

--- a/style.css
+++ b/style.css
@@ -22,15 +22,42 @@
 }
 .instructions h1{
   color: green;
+  text-align: center;
+  font-size:x-large;
+  font-weight:bolder;
 }
+.instructions table tr{
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
 .start-btn{
-  margin: 2% 20%;
   border: 2px solid green;
   background-color: #fff;
   color: green;
-  border-radius: 15px;
-  padding: 25px 90px;
+  border-radius: 12px 10px;
+  padding: 20px 95px;
+  text-align: center;
+  font-size: 16px;
+  
+
+  /* Responsive design using media querry*/
+  
+  @media screen and (max-width: 768px) {
+    padding: 10px 20px;
+  }
+
+  @media screen and (max-width: 480px) {
+    padding: 8px 15px;
+  }
+
+  @media screen and (max-width: 320px) {
+    padding: 2px 10px;
+    margin-bottom: 100px;
+  }
 }
+
 .start-btn:hover{
   background-color: green;
   color: #fff;
